(lang dune 3.15)
(name bonsai_chess)
(version 0.1.0)

(package
 (name bonsai_chess)
 (allow_empty)
 (depends
  (ocaml (>= 5.1.0))
  (dune (>= 3.15))
  (core (>= v0.17))
  (core_unix (>= v0.17))
  (ppx_jane (>= v0.17))
  (ppx_yojson_conv (>= v0.17))
  (caqti (>= 2.0))
  (caqti-lwt (>= 2.0))
  (caqti-driver-postgresql (>= 2.0))
 (cohttp-lwt-unix (>= 5.1.1))
  (conduit-lwt-unix (>= 5.0))
  (yojson (>= 2.0))
  (digestif (>= 1.0))
  (logs (>= 0.7))
  (fmt (>= 0.9))
  (cmdliner (>= 1.2))
  (lwt (>= 5.0))
  (ptime (>= 0.9))
  (bonsai (>= v0.17))
  (async_kernel (>= v0.17))
  (js_of_ocaml (>= 5.0))
  (js_of_ocaml-compiler (>= 5.0))))
